--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -4,7 +4,7 @@
   <div class="graph-container">
     <br>
     <%= link_to(exercise.name, records_path(exercise_id: exercise.id), class: "link ex_name")%>
-    <%= link_to("名前の変更", edit_exercise_path(exercise.id), class: "link ex_option")%>
+    <%= link_to("名前編集", edit_exercise_path(exercise.id), class: "link ex_option")%>
     <%= link_to("種目を削除", "/exercises/#{exercise.id}", method: :delete, data:{ confirm: "本当に削除しますか？"}, class: "link ex_option") %>
     <% record = Record.where(name_id: exercise.id) %>
     <% graph = record.pluck(:date, :RM) %>
