--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -7,9 +7,14 @@
     <%= link_to("名前編集", edit_exercise_path(exercise.id), class: "link ex_option")%>
     <%= link_to("種目を削除", "/exercises/#{exercise.id}", method: :delete, data:{ confirm: "本当に削除しますか？"}, class: "link ex_option") %>
     <% record = Record.where(name_id: exercise.id) %>
+    <%# data = record.pluck(:weight, :reps_count, :date, :RM) %>
+    <%# graph = [] %>
+    <%# data.each do |da| %>
+      <%# graph.push({name: "#{da[0]}kg × #{da[1]}reps", data: [[da[2], da[3]]]}) %>
+    <%# end %>
     <% graph = record.pluck(:date, :RM) %>
     <% min_RM = record.pluck(:RM).min - 5 %>
     <% max_RM = record.pluck(:RM).max + 5 %>
-    <%= line_chart graph, min: min_RM, max: max_RM %>
+    <%= line_chart graph, xtitle: "Date", ytitle: "RM ( kg / 1rep )", min: min_RM, max: max_RM %>
   </div>
 <% end %>
