--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,42 @@
 <% provide(:title, "トップページ") %>
 
-<%# if user_signed_in? %>
-  <%#= link_to "ログアウト", destroy_user_session_path, method: :delete %> 
-<%# else %>
-  <!-- <h2> 現在ログインしていません </h2> --> 
-  <%#= link_to "ログイン", new_user_session_path, class: 'post' %>
-  <%#= link_to "新規登録", new_user_registration_path, class: 'post' %> 
-<%# end %>
-<h1>このアプリは...</h1>
+<div class="top_container">
+  <p class="top_text">
+  <span>このアプリはトレーニングの記録から自動的にRM値を計算しグラフを描画することであなたのトレーニングをサポートするサービスです。</span>
+  <br>
+  <img src="/assets/img_graph.jpg" class="img_graph">
+  <br>
+  <span>RMとは？</span><br>
+  Repetition Maximum（最大挙上重量）<br>
+  つまり、ある人があるトレーニング種目を全力を出して1回だけ行える重量のことです。<br>
+  <br>
+  ウェイトトレーニングで筋肉を成長させるには、毎回のトレーニングで異なる刺激を筋肉に与える必要があります。<br>
+  ある日は、重いものを少ない回数で、、。別の日は軽いものを多い回数で、、。<br>
+  といった具合です。<br>
+  <br>
+  ここで質問です。<br>
+  「20kgを20回」と、「10kgを40回」どちらが筋肉に対して強い刺激かわかりますか？<br>
+  答えは、「20kgを20回」の方が強い刺激です。<br>
+  理由は、RM値によって計算できます。<br>
+  （※RMの計算方法はいくつかありますが、ここではエビデンスが明瞭である田中・笠原の式を用います。）<br>
+  <br>
+  計算式は、1RM = 重量 ÷ （(102.89 － 2.9119 × 回数 ＋ 0.0319 × 回数2 － 0.000035399 × 回数3）÷100）<br>
+
+  この式は、1994年に広島経済大学の田中さんと笠原さんが、1回のみ挙上可能な最大重量に対する負荷の百分率（% of 1RM）の関係を多項式回帰した検証論文で発表されました。<br>
+
+  よって<br>
+  1RM = 20 ÷ （(102.89 － 2.9119 × 20 ＋ 0.0319 × 20 × 20 － 0.000035399 × 20 × 20 × 20）÷100）= 35.01kg<br>
+  1RM = 10 ÷ （(102.89 － 2.9119 × 40 × 40 ＋ 0.0319 × 40 － 0.000035399 × 40 × 40 × 40）÷100）= 28.42kg<br>
+  となるわけです。<br>
+  <br>
+  ただし毎回重量と回数を変えてトレーニングし、この計算をして刺激を比較するのは大変なのがわかると思います。<br>
+  <br>
+  そこでこのサービスはその日のトレーニングの重量と回数を記録することでRM値を自動計算し、グラフに描画します。<br>
+  毎回違う刺激を与えながらも、同じ尺度で成長推移を可視化してあなたの筋力の成長を一目瞭然にします！<br>
+  <br>
+  <span>ぜひこのアプリを使ってみてください！</span></p>
+  <div style="display:inline-flex">
+    <%= button_to 'ログイン', new_user_session_path, {method: :get, class: "btn btn_login"} %>
+    <%= button_to '新規登録', new_user_registration_path, {method: :get, class: "btn btn_register"} %>
+  </div>
+</div>
