--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -67,6 +67,7 @@ header {
 
 /* home#index */
 .top_container {
+  max-width: 100vw;
   text-align: center;
   .top_text {
     width: 100%;
@@ -74,7 +75,7 @@ header {
     margin-top: 60px;
   }
   img {
-    width: auto;
+    width: 100%;
     margin: 40px 0;
   }
   span {
